<resources>
    <string name="app_name">Blood Bank</string>
    <string name="all_rights_reserved_to_ebda3_tech_2019">All rights reserved to Ebda3 Tech 2019</string>
    <string name="skip">Skip</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="did_you_forget_the_password">Did you forget the password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="send">Send</string>
    <string name="forgot_the_password">Forgot the password</string>
    <string name="change_password_code">Change Password Code</string>
    <string name="code">code</string>
    <string name="the_new_password">The new Password</string>
    <string name="confirm_the_new_password">Confirm the new password</string>
    <string name="change_password">Change the password</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="governorates">Governorate</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm password</string>
    <string name="blood_type">Blood type</string>
    <string name="the_latest_date_of_donation">The latest date of donation</string>
    <string name="birth_date">Birth date</string>
    <string name="no_internet">You should connect to internet</string>
    <string name="wait_moment">Wait a moment ..</string>
    <string name="user_name_password">You should insert your phone and password</string>
    <string name="menu_account">My information</string>
    <string name="menu_notification">Notification settings</string>
    <string name="menu_heart">Favouraties</string>
    <string name="menu_home">Home</string>
    <string name="menu_instructions">Instructions</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_about_app">About application</string>
    <string name="menu_rate_app">Rate application</string>
    <string name="menu_quit">Sign out</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">close</string>
    <string name="fake_txt">هذا النص يمكن استبداله باي نص اخر هذا النص يمكن استبداله باي نص اخر هذا النص يمكن استبداله باي نص اخر هذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرررررررهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخرهذا النص يمكن استبداله باي نص اخر</string>
    <string name="contact_us">Contact us</string>
    <string name="your_message">Message title</string>
    <string name="message_content">Message content</string>
    <string name="choose_blood_type">The blood type</string>

    <string name="choose_governorate">The governorate</string>

    <string name="choose_city">The city</string>
    <string name="check_information">Please , check your data</string>
    <string name="posts">Posts</string>
    <string name="donation">Donation</string>
    <string name="enter_search_name_here">Enter search name here ..</string>
    <string name="modify">Modify</string>
    <string name="are_you_want_sign_out">Are you sure to sign out ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_exit">You don\'t save changes , do you want to leave ?</string>
    <string name="an_hospital">An Hospital</string>
    <string name="details">Details</string>
    <string name="call_him">Call him</string>
    <string name="exit_app">Do you want to exit ?</string>
    <string name="no_more">There is no more</string>
    <string name="refresh_done">Updated</string>
    <string name="do_you_want_call">Do you want call</string>
    <string name="donation_request">Donation request</string>
    <string name="age">Age</string>
    <string name="bag_number">Number of bags</string>
    <string name="hospital_address">Hospital address</string>
    <string name="send_request">Send a Request</string>
    <string name="notes">Notes</string>
    <string name="fake_text_2">هذا النص يمكن استبدالة باي نص اخر هذا النص يمكن استبدالة باي نص اخر هذا النص يمكن استبدالة باي نص اخر</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="garbia">الغربية</string>
    <string name="dakahlia">الدقهلية</string>
    <string name="mania">المنيا</string>
    <string name="elshikh">كفر الشيخ</string>
    <string name="cairo">القاهرة</string>
    <string name="sharquia">الشرقية</string>
    <string name="save">Save</string>
    <string name="a">A+</string>
    <string name="minus_a">A-</string>
    <string name="o">O+</string>
    <string name="minus_o">O-</string>
    <string name="ab">AB+</string>
    <string name="minus_ab">AB-</string>
    <string name="choose_location">Select the location</string>
    <string name="location_not_deter">location_not_deter</string>
    <string name="try_again">try_again</string>
    <string name="error">Error</string>
    <string name="insert_phone">Insert phone number</string>
    <string name="insert_password">Insert password</string>
    <string name="password_does_not_match">password does not match</string>
    <string name="insert_code">Insert code</string>
    <string name="insert_correct_phone">Insert correct phone</string>
    <string name="insert_user_name">Insert user name</string>
    <string name="insert_mail">Insert mail</string>
    <string name="insert_birth_data">Insert birth data</string>
    <string name="insert_last_donation_data">Insert last donation data</string>
    <string name="insert_blood_type">Insert blood type</string>
    <string name="insert_city">Insert city</string>
    <string name="insert_governorate">Insert governorate</string>
    <string name="insert_age">Insert patient age</string>
    <string name="insert_num_bags">Insert number of bags</string>
    <string name="insert_hospital_name">Insert hospital name</string>
    <string name="insert_hospital_address">Insert hospital address</string>
    <string name="insert_hospital_location">Insert hospital location</string>
    <string name="insert_notes">Insert notes</string>
    <string name="insert_categery">Insert categery</string>
    <string name="insert_keyWord">Insert key word</string>
    <string name="no_result">No result found</string>
    <string name="post_added">Post was added to favourite</string>
    <string name="post_no_added">Failed to add post to favourite</string>
    <string name="post_deleted">Post deleted</string>
    <string name="post_no_removed">Failed to remove</string>


</resources>
