<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"

    >

    <LinearLayout
        android:padding="@dimen/dim_12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:padding="@dimen/dim_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/txt_margin_bottom"
            android:text="@string/change_password_code"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/new_password_fragment_et_code"
            style="@style/LoginFragmentET"
            android:hint="@string/code"
            android:inputType="number" />

        <EditText
            android:id="@+id/new_password_fragment_et_password"
            style="@style/LoginFragmentET"
            android:hint="@string/the_new_password"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/new_password_fragment_et_password_confirm"
            style="@style/LoginFragmentET"
            android:hint="@string/confirm_the_new_password"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/new_password_fragment_btn_change"
            style="@style/LoginFragmentBtn"
            android:background="@drawable/background_et"
            android:backgroundTint="@color/colorGreen"
            android:text="@string/change_password" />

    </LinearLayout>

</ScrollView>
