<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    >

<LinearLayout
    android:padding="@dimen/dim_12dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:padding="@dimen/dim_20dp"
        android:id="@+id/user_cycle_activity_im_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/forgot_the_password"
        android:layout_marginBottom="@dimen/txt_margin_bottom"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/reset_password_fragment_et_phone"
        style="@style/LoginFragmentET"
        android:hint="@string/phone_number"
        android:inputType="number"
        />
    <Button
        style="@style/LoginFragmentBtn"
        android:text="@string/send"
        android:backgroundTint="@color/colorGreen"
        android:id="@+id/forget_password_fragment_btn_send"
        />

</LinearLayout>

</ScrollView>
